--- a/app/src/main/res/drawable/left_corner.xml
+++ b/app/src/main/res/drawable/left_corner.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <solid android:color="@color/black" />
+    <solid android:color="@color/white" />
 
     <padding
         android:left="1dp"
@@ -8,5 +8,6 @@
         android:bottom="1dp"
         android:top="1dp" />
 
-    <corners android:topLeftRadius="100dp" />
+    <corners android:topLeftRadius="25dp"
+        android:topRightRadius="25dp"/>
 </shape>
